--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ annotated-types==0.7.0
 anyio==4.9.0
 asgiref==3.9.1
 beautifulsoup4==4.13.4
+celery==5.3.6
 certifi==2025.7.14
 charset-normalizer==3.4.2
 click==8.2.1
